SWU-763 - Fixed the wrapping of long list items

--- a/swinburne-aem-prototype/source/sut/scss/core/_lists.scss
+++ b/swinburne-aem-prototype/source/sut/scss/core/_lists.scss
@@ -5,18 +5,14 @@ ul {
   padding-bottom: 0;
 
   li {
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
     padding-left: 15px;
-    position: relative;
 
     &::before {
       color: color('grey-3');
-      left: 0;
-      margin-top: 12px;
-      position: absolute;
-      top: 0;
+      display: inline-block;
+      margin-left: -15px;
+      margin-right: 10px;
+      position: relative;
     }
   }
 }
@@ -25,17 +21,19 @@ ul li::before {
   background-color: currentColor;
   border-radius: 100%;
   content: '';
-  display: block;
   height: 5px;
+  top: -3px;
   width: 5px;
 }
 
 ol {
   counter-reset: list-item;
 
-  li::before {
-    content: counter(list-item);
+  li {
     counter-increment: list-item;
-    line-height: 5px;
+
+    &::before {
+      content: counter(list-item);
+    }
   }
 }
